force-app/main/objects/Invoice__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description
  >Date by which the invoice must be paid. Auto-populated on insert from Invoice Date and the related Account's Payment Terms when left blank; a user-supplied value is preserved.</description>
    <inlineHelpText
  >Leave blank to auto-calculate from the Account's Payment Terms.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>