force-app/main/objects/Invoice__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description
  >Date the invoice was issued. Used as the anchor for calculating the Due Date based on the related Account's Payment Terms. Defaults to today.</description>
    <inlineHelpText
  >The date this invoice was issued. Drives the auto-calculated Due Date.</inlineHelpText>
    <label>Invoice Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>